--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Welcome to Special Pancake</h1>
+  <h1>Welcome to Special Pancake dfgkjndfgsnbjkgr</h1>
   <p>This is a simple web page.</p>
   <script src="index.js"></script>
 </body>
