--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Special Pancake</title>
-  <link rel="stylesheet" href="index.css">
-</head>
-<body>
-  <h1>Welcome to Special Pancake dfgkjndfgsnbjkgr</h1>
-  <p>This is a simple web page.</p>
-  <script src="index.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>three.js app</title>
+		<style>
+			body { margin: 0; }
+		</style>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.170.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.170.0/examples/jsm/"
+        }
+      }
+    </script>
+	</head>
+	<body>
+		<script type="module" src="/index.js"></script>
+	</body>
 </html>
