--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>three.js app</title>
 		<style>
-			body { margin: 0; }
+      html { height: 100%; background-color: darkgrey; }
+			body { margin: 0; height: 100%; display: flex; justify-content: center; align-items: center; }
 		</style>
     <script type="importmap">
       {
